--- a/EmployeePortalFrontend/src/App.css
+++ b/EmployeePortalFrontend/src/App.css
@@ -1,19 +1,20 @@
 ﻿#root {
-    max-width: 933px;
-    margin:  auto;
-    padding: 2rem;
-    text-align: left;
+  max-width: 933px;
+  margin: auto;
+  padding: 2rem;
+  text-align: left;
 }
 
 tr:nth-child(even) {
-    background: #F2F2F2;
+  background: #f2f2f2;
 }
 
 tr:nth-child(odd) {
-    background: #FFF;
+  background: #fff;
 }
 
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+th,
+td {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
