--- a/EmployeePortalFrontend/src/Styles/Common.css
+++ b/EmployeePortalFrontend/src/Styles/Common.css
@@ -1,39 +1,42 @@
 .custom_container {
-    display: flex;
-    flex-direction: column;
-   
-    background-color: white;
-    padding: 1.5em;
-    border-radius: 5px;
-    border: 1px solid lightgray;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  flex-direction: column;
+
+  background-color: white;
+  padding: 1.5em;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .user_icon_container {
-    display: flex;
-    background-color:coral;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+  display: flex;
+  background-color: coral;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
 
 .user_icon {
-    color: white;
-    font-size: 25px;
-    font-weight: 600;
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .message_container {
-    display: flex;
-    align-items: center;
-   
-    padding: 1.2em;
-    margin: 200px, 0 0 0;
-    
+  display: flex;
+  align-items: center;
+
+  padding: 1.2em;
+  margin:
+    200px,
+    0 0 0;
 }
 
 .ui.message {
-    margin: 5px 5px 0 0;
+  margin: 5px 5px 0 0;
 }
